--- a/environments/requirements/requirements_pabloenv.txt
+++ b/environments/requirements/requirements_pabloenv.txt
@@ -4,24 +4,26 @@ aioitertools==0.7.1
 argon2-cffi==20.1.0
 async-generator==1.10
 async-timeout==3.0.1
-attrs==20.3.0
-backcall==0.2.0
+attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1620387926260/work
+backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1618230623929/work
 bcrypt==3.2.0
-bleach==3.2.1
-boto3
-botocore
+bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1612213472466/work
+boto3==1.16.52
+botocore==1.19.52
 cachetools==4.2.1
-certifi==2020.11.8
-cffi==1.14.3
+certifi==2021.5.30
+cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1606236118475/work
 chardet==3.0.4
 cloudpickle==1.6.0
-cryptography==3.2.1
+cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography_1616851478720/work
 cycler==0.10.0
 decorator==4.4.2
-defusedxml==0.6.0
+defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
+dnspython @ file:///home/conda/feedstock_root/build_artifacts/dnspython_1622405147478/work
 docker==4.4.4
 english==2020.7.0
-entrypoints==0.3
+entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1605121927639/work/dist/entrypoints-0.3-py2.py3-none-any.whl
 fsspec==0.8.5
 future==0.18.2
 glmnet==2.2.1
@@ -33,53 +35,57 @@ googleapis-common-protos==1.53.0
 greenlet==0.4.17
 httplib2==0.19.0
 hyperopt==0.2.5
-idna==2.10
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1609836280497/work
 idna-ssl==1.1.0
-importlib-metadata==2.0.0
+importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1622488238537/work
 ipykernel==5.3.4
 ipympl==0.6.3
-ipython==7.16.1
+ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1609697613279/work
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
-jedi==0.17.2
-Jinja2==2.11.2
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1605054537831/work
+Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1621419064915/work
 jmespath==0.10.0
-joblib==1.0.1
-jsonschema==3.2.0
+joblib==0.17.0
+jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema_1614815863336/work
 jupyter-client==6.1.7
 jupyter-core==4.6.3
-jupyterlab-pygments==0.1.2
+jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1601375948261/work
 jupyterlab-widgets==1.0.0
 jupyterthemes==0.20.0
 jupytext==1.9.1
-kiwisolver==1.3.1
+kiwisolver @ file:///home/conda/feedstock_root/build_artifacts/kiwisolver_1610099771815/work
 lesscpy==0.14.0
 markdown-it-py==0.6.1
-MarkupSafe==1.1.1
+MarkupSafe @ file:///home/conda/feedstock_root/build_artifacts/markupsafe_1621455668064/work
 matplotlib==3.3.2
 mdit-py-plugins==0.2.4
-mistune==0.8.4
+mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_1610112872127/work
 monotonic==1.5
 msgpack==1.0.0
 multidict==5.1.0
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
+mysql==0.0.3
+mysql-connector-python==8.0.21
+mysqlclient==2.0.3
+nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1614336084111/work
+nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert_1605401832871/work
+nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1617383142101/work
 neotime==1.7.4
 neovim==0.3.1
-nest-asyncio==1.4.2
+nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1617163391303/work
 networkx==2.5
 notebook==6.1.5
-numpy==1.20.2
-packaging==20.4
+numpy==1.19.4
+olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1612459636436/work
 pandas==1.1.4
 pandocfilters==1.4.3
 pansi==2020.7.3
 paramiko==2.7.2
-parso==0.7.1
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1595548966091/work
 patsy==0.5.1
-pexpect==4.8.0
-pickleshare==0.7.5
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1602535608087/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
 Pillow==8.0.1
 plotly==4.14.3
 ply==3.11
@@ -93,14 +99,18 @@ py2neo==2021.0.1
 pyarrow==2.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser==2.20
+pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
 Pygments==2.7.2
 pymongo==3.11.1
 PyMySQL==1.0.2
 PyNaCl==1.4.0
 pynvim==0.4.2
 pyparsing==2.4.7
-pyrsistent==0.17.3
+PyQt5==5.12.3
+PyQt5-sip==4.19.18
+PyQtChart==5.12
+PyQtWebEngine==5.12.1
+pyrsistent @ file:///home/conda/feedstock_root/build_artifacts/pyrsistent_1610146795286/work
 python-dateutil==2.8.1
 pytz==2020.4
 PyYAML==5.4.1
@@ -110,31 +120,32 @@ retrying==1.3.3
 rsa==4.7.2
 s3fs==0.4.2
 s3transfer==0.3.4
-scikit-learn==0.24.2
-scipy==1.6.3
+scikit-learn==0.23.2
+scipy==1.5.4
 seaborn==0.11.0
 Send2Trash==1.5.0
-six==1.15.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1590081179328/work
 sklearn-pandas==2.0.4
 SQLAlchemy==1.3.20
 sqlalchemy-redshift==0.8.2
 sshtunnel==0.3.1
 statsmodels==0.12.1
 terminado==0.9.1
-testpath==0.4.4
+testpath @ file:///home/conda/feedstock_root/build_artifacts/testpath_1621261527237/work
 threadpoolctl==2.1.0
 toml==0.10.2
-tornado==6.1
+tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1610094701020/work
 tqdm==4.56.0
 traitlets==4.3.3
-typing-extensions==3.7.4.3
+typing-extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1602702424206/work
+Unidecode==1.2.0
 uritemplate==3.0.1
 urllib3==1.26.3
-wcwidth==0.2.5
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
 webencodings==0.5.1
 websocket-client==0.58.0
 widgetsnbextension==3.5.1
 wrapt==1.12.1
 xgboost==1.3.3
 yarl==1.6.3
-zipp==3.4.0
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1614945704755/work
